Fix cannon physics: TNT water gravity, waterlogged explosion check, chunk loading block update prevention, location save/restore system